--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
   },
   "homepage": "https://github.com/ginahend94/wheres-spongebob#readme",
   "dependencies": {
+    "iconify-icon": "^1.0.1",
     "normalize-css": "^2.3.1"
   },
   "devDependencies": {
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
-    "inline-source-map": "^0.6.2",
-    "style-loader": "^3.3.1",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "inline-source-map": "^0.6.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
