remove redundant code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "operator-linebreak":"off",
     "consistent-return":"warn",
     "comma-dangle":"off",
-    "no-param-reassign": ["error", {"props": false}]
+    "no-param-reassign": ["error", {"props": false}],
+    "no-plusplus":"off"
   }
 }
